# WANDERCHINA

./: .env.example  .gitignore  API_DEMO.html  ARCHITECTURE.md  COMPLETION.md  Dockerfile  FIXES_SUMMARY.md  HOW_TO_OPEN_PREVIEW.md  IMPLEMENTATION_SUMMARY.md  PREVIEW.html  QUICKSTART.md  README.md  USAGE_GUIDE.md  WINDOWS_SETUP_GUIDE.md  alembic.ini  demo.py  docker-compose.yml  index_final.html  index_preview.html  index_three_zones.html  index_yinyang.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_preview.bat
alembic/: env.py
alembic/versions/: 20260519_add_user_profile_fields.py  20260520_post_category.py
app/: config.py  main.py  main_demo.py
app/api/: data_generation.py  map.py
app/core/: celery_app.py  config.py  deps.py  enums.py  profile.py  security.py
app/database/: base.py
app/db/: session.py
app/models/: __init__.py  community.py  database.py  dataset.py  user.py
app/schemas/: __init__.py  community.py  community_ext.py  dataset.py  map.py  profile.py  user.py
app/services/: __init__.py  annotation_service.py  community_service.py  data_generation.py  dataset_service.py  evaluation_service.py  export_service.py  map_service.py  model_client.py  model_clients.py  model_router.py  profile_service.py  prompt_manager.py  quality_evaluator.py  recommendation_service.py
app/tasks/: celery_app.py  data_generation_tasks.py  generation.py
app/utils/: cache.py  helpers.py  logging.py
houduan/: config.py  crud.py  database.py  dependencies.py  exceptions.py  main.py  models.py  requirements.txt  schemas.py  security.py  start.py  test_import.py
houduan/routes/: auth.py  permission.py  users.py
model_services/annotation/: main.py
model_services/generation/: main.py
model_services/quality/: main.py
output/: alpaca_20260520_005219.jsonl  raw_20260520_002720.jsonl  raw_20260520_005219.jsonl  sharegpt_20260520_002720.jsonl  sharegpt_20260520_005219.jsonl
scripts/: init_db.py  seed_demo.py  setup.bat  setup.sh
src/: App.tsx  index.css  supabase.js
src/agents/: graph_workflow.py  persona_manager.py
src/core/: annotator.py  evaluator.py  llm_router.py  schemas.py
src/types/: index.ts
tests/: test_api.py  test_profile.py  test_quality.py  test_utils.py
web/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
(+42 files in other folders)
